--- a/Style.css
+++ b/Style.css
@@ -19,11 +19,18 @@ a {
   align-items: center;
   justify-content: center;
 }
-
 img {
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+p {
+  color: black;
+  font-size: 1.4rem;
+  margin-top: 5px;
+  line-height: 2.5rem;
+  font-weight: 300;
+  letter-spacing: 0.05rem;
 }
 
 /* Hero Section */
@@ -111,9 +118,6 @@ img {
 /* End of Hero Section */
 
 /* Services Section */
-#services {
-  text-decoration: none;
-}
 #services .services {
   flex-direction: column;
   text-align: center;
@@ -134,6 +138,7 @@ img {
   color: crimson;
 }
 #services .service-top p {
+  color: black;
   font-size: 1.4rem;
   margin-top: 5px;
   line-height: 2.5rem;
@@ -145,6 +150,7 @@ img {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 50px;
 }
 #services .service-item {
   flex-basis: 80%;
@@ -159,6 +165,7 @@ img {
   margin: 10px 5%;
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 #services .service-item::after {
   content: "";
@@ -190,8 +197,6 @@ img {
 #services .service-item p {
   color: white;
   text-align: left;
-  font-size: 1.4rem;
-  line-height: 1.9rem;
 }
 /* End of Service Section */
 
